--- a/index/templates/listen.html
+++ b/index/templates/listen.html
@@ -152,7 +152,7 @@
             <span class="active">
               More
             </span>
-            <span class="exp-icon"></span>
+            <span class="exp-icon exp-down"></span>
           </a>
         </div>
         <div class="collapse fade splash-play-collapse" id="splash-play-collapse{{ forloop.counter }}">
