--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -141,7 +141,7 @@
               <span class="active">
                 Login
               </span>
-              <span class="exp-icon">
+              <span class="exp-icon exp-up">
               </span>
             </a>
             <a class="btn-dope signup-link" href="/?view=signup" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="{% if view == 'signup' %}true{% else %}false{% endif %}"
@@ -149,7 +149,7 @@
               <span class="active">
                 Signup
               </span>
-              <span class="exp-icon">
+              <span class="exp-icon exp-up">
               </span>
             </a>
           </div>
