--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -57,7 +57,7 @@
           <span class="active">
             Initial
           </span>
-          <span class="exp exp-icon">
+          <span class="exp-icon exp-down">
             {% if results.alphabet_nix_url %}
               {{ results.selected_q|capfirst }}
             {% else %}
@@ -71,7 +71,7 @@
           <span class="active">
             Genre
           </span>
-          <span class="exp exp-icon">
+          <span class="exp-icon exp-down">
             {% if results.selected_genre %}
               {{ results.selected_genre }}
             {% else %}
@@ -85,7 +85,7 @@
           <span class="active">
             Language
           </span>
-          <span class="exp exp-icon">
+          <span class="exp-icon exp-down">
             {% if results.selected_language %}
               {{ results.selected_language }}
             {% else %}
