--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -78,7 +78,7 @@
         </li>
         <li>
           <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ podcast.url_format_description }}&url={{ podcast.get_absolute_url }}">
-            <span>
+            <span class="active">
               <i class="fab fa-twitter" title="Tweet"></i>
             </span>
             <span>
@@ -86,7 +86,7 @@
             </span>
           </a>
           <a class="btn-dope" href="//www.facebook.com/sharer/sharer.php?u={{ podcast.get_absolute_url }}">
-            <span>
+            <span class="active">
               <i class="fab fa-facebook-f" title="Share"></i>
             </span>
             <span>
