--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -9,7 +9,7 @@
       <span class="active">
         Change Password
       </span>
-      <span class="exp-icon">
+      <span class="exp-icon exp-down">
       </span>
     </a>
     <div class="collapse fade settings-collapse" id="change-collapse">
@@ -46,7 +46,7 @@
       <span class="active">
         General Settings
       </span>
-      <span class="exp-icon">
+      <span class="exp-icon exp-down">
       </span>
     </a>
     <div class="collapse fade settings-collapse" id="general-collapse">
@@ -96,7 +96,7 @@
       <span class="active">
         Delete Account
       </span>
-      <span class="exp-icon">
+      <span class="exp-icon exp-down">
       </span>      
     </a>
     <div class="collapse fade settings-collapse" id="solong-collapse">
