--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -6,7 +6,7 @@
           <span class="active">
             Genre
           </span>
-          <span class="exp-icon">
+          <span class="exp-icon exp-down">
             {% if results.selected_genre %}
               {{ results.selected_genre }}
             {% else %}
@@ -20,7 +20,7 @@
           <span class="active">
             Language
           </span>
-          <span class="exp-icon">
+          <span class="exp-icon exp-down">
             {% if results.selected_language %}
               {{ results.selected_language }}
             {% else %}
@@ -34,7 +34,7 @@
           <span class="active">
             Source
           </span>
-          <span class="exp-icon">
+          <span class="exp-icon exp-down">
             {% if results.provider == "dopepod" %}
               dopepod
             {% elif results.provider == "itunes" %}
