--- a/podcasts/templates/previous.html
+++ b/podcasts/templates/previous.html
@@ -22,7 +22,7 @@
       </a>
       <button class="dope-toggle float-right" data-toggle="collapse" data-target="#previous-collapse{{ forloop.counter }}"
       aria-expanded="false">
-        <span class="exp-icon"></span>
+        <span class="exp-icon exp-down"></span>
       </button>
       <h1>
         <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}" title="{{ episode.podcast.title }}">
