--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -43,8 +43,8 @@
 </head>
 <body class="{% if user.profile.theme %}{{ user.profile.theme }}{% else %}light{% endif %}">
   <!-- SCROLL UP -->
-  <button class="scroll-up d-none">
-    <i class="fas fa-angle-up fa-lg" title="Up"></i>
+  <button class="scroll-up d-none" title="Scroll Up">
+    <i class="fas fa-angle-up fa-lg"></i>
   </button>
   <!-- DOPEBAR -->
   {% include "dopebar.min.html" %}
