--- a/index/templates/contact.html
+++ b/index/templates/contact.html
@@ -23,7 +23,7 @@
           <input class="dope-field" type="email" name="email" id="email" required />
         </div>
         <div class="col-auto">
-          <button class="btn-dope" type="submit">
+          <button class="btn-dope" type="submit" title="Send">
             <span class="active">
               Send
             </span>
