--- a/index/templates/reset-password.html
+++ b/index/templates/reset-password.html
@@ -25,7 +25,7 @@
             <input class="dope-field" type="password" name="password2" placeholder="Password (again)" required id="reset-password2" />
           </div>
           <div class="col-auto">
-            <button class="btn-dope" type="submit">
+            <button class="btn-dope" type="submit" title="Reset Password">
               <span class="active">
                 Reset
               </span>
