--- a/index/templates/search-form.html
+++ b/index/templates/search-form.html
@@ -2,7 +2,7 @@
   <label for="q" class="sr-only">Search for podcasts</label>
   <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
   aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8" />
-  <button class="search-button" type="submit">
-    <i class="fas fa-search" title="Search"></i>
+  <button class="search-button" type="submit" title="Search">
+    <i class="fas fa-search"></i>
   </button>
 </form>
