--- a/index/templates/social-login.html
+++ b/index/templates/social-login.html
@@ -1,15 +1,15 @@
 <div class="dope-buttons dope-buttons-c">
-  <a class="btn-dope" href="/account/google/login/?process=login">
+<a class="btn-dope" href="/account/google/login/?process=login" title="Sign in with Google">
     <span class="active">
-      <i class="fab fa-google" title="Google Login"></i>
+      <i class="fab fa-google"></i>
     </span>
     <span>
       Sign in with Google
     </span>
   </a>
-  <a class="btn-dope" href="/account/facebook/login/?process=login">
+  <a class="btn-dope" href="/account/facebook/login/?process=login" title="Sign in with Facebook">
     <span class="active">
-      <i class="fab fa-facebook-f" title="Facebook Login"></i>
+      <i class="fab fa-facebook-f"></i>
     </span>
     <span>
       Sign in with Facebook
