--- a/podcasts/templates/results-options.html
+++ b/podcasts/templates/results-options.html
@@ -2,15 +2,15 @@
   <div class="collapse fade options-collapse" id="alphabet-collapse-{{ results.view }}">
     <div class="dope-buttons dope-buttons-r">
       {% if results.alphabet_nix_url %}
-        <a class="btn-dope options-button nix-button" href="{{ results.alphabet_nix_url }}">
+        <a class="btn-dope options-button nix-button" href="{{ results.alphabet_nix_url }}" title="Undo Selection">
           <span>
-            <i class="fas fa-times" title="Undo Selection"></i>
+            <i class="fas fa-times"></i>
           </span>
         </a>
       {% endif %}
       {% for alphabet in results.alphabet %}
         {% if alphabet.1 %}
-          <a class="btn-dope options-button" href="{{ alphabet.1 }}">
+          <a class="btn-dope options-button" href="{{ alphabet.1 }}" title="{{ alphabet.0 }}">
             <span>
               {{ alphabet.0 }}
             </span>
@@ -30,15 +30,15 @@
   <div class="collapse fade options-collapse" id="genre-collapse-{{ results.view }}">
     <div class="dope-buttons dope-buttons-r">
       {% if results.genre_nix_url %}
-        <a class="btn-dope options-button nix-button" href="{{ results.genre_nix_url }}">
+        <a class="btn-dope options-button nix-button" href="{{ results.genre_nix_url }}" title="Undo Selection">
           <span>
-            <i class="fas fa-times" title="Undo Selection"></i>
+            <i class="fas fa-times"></i>
           </span>
         </a>
       {% endif %}
       {% for genre in results.genres %}
         {% if genre.1 %}
-          <a class="btn-dope options-button" href="{{ genre.1 }}">
+          <a class="btn-dope options-button" href="{{ genre.1 }}" title="{{ genre.0 }}">
             <span>
               {{ genre.0 }}
             </span>            
@@ -58,15 +58,15 @@
   <div class="collapse fade options-collapse" id="language-collapse-{{ results.view }}">
     <div class="dope-buttons dope-buttons-r">
       {% if results.language_nix_url %}
-        <a class="btn-dope options-button nix-button" href="{{ results.language_nix_url }}">
+        <a class="btn-dope options-button nix-button" href="{{ results.language_nix_url }}" title="Undo Selection">
           <span>
-            <i class="fas fa-times" title="Undo Selection"></i>
+            <i class="fas fa-times"></i>
           </span>
         </a>
       {% endif %}
       {% for language in results.languages %}
         {% if language.1 %}
-          <a class="btn-dope options-button" href="{{ language.1 }}">
+          <a class="btn-dope options-button" href="{{ language.1 }}"  title="{{ language.0 }}">
             <span>
               {{ language.0 }}
             </span>
@@ -86,23 +86,23 @@
   <div class="collapse fade options-collapse" id="provider-collapse-{{ results.view }}">
     <div class="dope-buttons dope-buttons-r">
       {% if results.provider == "dopepod" %}
-        <button class="btn-dope">
+        <button class="btn-dope" title="dopepod">
           <span class="active">
             dopepod
           </span>
         </button>
-        <a class="btn-dope options-button" href="{{ results.provider_url }}">
+        <a class="btn-dope options-button" href="{{ results.provider_url }}" title="itunes">
           <span>
             itunes
           </span>
         </a>
       {% else %}
-        <a class="btn-dope options-button" href="{{ results.provider_url }}">
+        <a class="btn-dope options-button" href="{{ results.provider_url }}" title="dopepod">
           <span>
             dopepod
           </span>
         </a>
-        <button class="btn-dope">
+        <button class="btn-dope" title="itunes">
           <span class="active">
             itunes
           </span>
