--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -13,11 +13,13 @@
 {% block center-stage %}
 <div class="col-12 results color-2 {{ results.view }}" {% if results.selected_q %}data-q="{{ results.selected_q }}"{% endif %} {% if results.podcast.podid %}data-podid="{{ results.podcast.podid }}"{% endif %}>
   {% include "results_bar.html" %}
-  {% if results.podcast %}
-    {% include "showpod.min.html" %}
-  {% endif %}
-  <div class="row">
-    <div class="col-12 collapse results-collapse fade show" id="results-collapse-{{ results.view }}">
+  <div class="row collapse results-collapse fade show" id="results-collapse-{{ results.view }}">
+    {% if results.podcast %}
+      <div class="col-12">
+        {% include "showpod.min.html" %}
+      </div>
+    {% endif %}
+    <div class="col-12 results-content">
       {% if results.view == "splash" or results.view == "dashboard" %}
         {% include "splashboard.min.html" %}
       {% elif results.view == "grid" or results.view == "list" %}
