--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -18,7 +18,7 @@
           </li>
           <li>
             <a class="dope-link previous-link" href="#">
-              Previously played
+              Previous
             </a>
           </li>
           {% if user.is_authenticated %}
@@ -115,7 +115,7 @@
     </li>
     <li>
       <a class="dope-link previous-link" href="#">
-        Previously played
+        Previous
       </a>
     </li>
     {% if user.is_authenticated %}
