--- a/index/templates/footer.html
+++ b/index/templates/footer.html
@@ -30,7 +30,7 @@
             <input type="hidden" name="item_name" value="dopepod">
             <input type="hidden" name="no_note" value="0">
             <input type="hidden" name="currency_code" value="USD">
-            <button class="dope-link" type="submit">
+            <button class="dope-link" type="submit" title="Donate on PayPal">
               Donate
             </button>
           </form>
@@ -46,13 +46,13 @@
           </a>
         </li>
         <li>
-          <a class="dope-link" href="//www.facebook.com/dopepod.me">
-            <i class="fab fa-facebook-f" title="Facebook"></i>
+          <a class="dope-link" href="//www.facebook.com/dopepod.me" title="Facebook">
+            <i class="fab fa-facebook-f"></i>
           </a>
         </li>
         <li>
-          <a class="dope-link" href="//twitter.com/_dopepod_">
-            <i class="fab fa-twitter" title="Twitter"></i>
+          <a class="dope-link" href="//twitter.com/_dopepod_" title="Twitter">
+            <i class="fab fa-twitter"></i>
           </a>
         </li>
       </ul>
