--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -35,9 +35,12 @@
                 <input class="dope-field" type="password" name="password" required id="login-password" />
               </div>
               <div class="col-auto">
-                <button class="btn-dope" type="submit">
+                <button class="btn-dope" type="submit" title="Login">
                   <span class="active">
                     Login
+                  </span>
+                  <span>
+                    <i class="fas fa-sign-in-alt"></i>
                   </span>
                 </button>
               </div>
@@ -85,10 +88,13 @@
                 <input class="dope-field" type="password" name="password2" required id="signup-password2" />
               </div>
               <div class="col-auto">
-                <button class="btn-dope" type="submit">
+                <button class="btn-dope" type="submit" title="Signup">
                   <span class="active">
                     Signup
-                  </span>                  
+                  </span>
+                  <span>
+                    <i class="fas fa-user-plus"></i>
+                  </span>                 
                 </button>
               </div>
             </div>
@@ -113,9 +119,12 @@
                 <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required />
               </div>
               <div class="col-auto">
-                <button class="btn-dope" type="submit">
+                <button class="btn-dope" type="submit" title="Send">
                   <span class="active">
                     Send
+                  </span>
+                  <span>
+                    <i class="far fa-envelope"></i>
                   </span>
                 </button>
               </div>
@@ -137,19 +146,21 @@
         </p>
         <div class="dope-buttons dope-buttons-c">
             <a class="btn-dope login-link" href="/?view=login" data-target="#login-collapse" data-toggle="collapse" aria-expanded="{% if view == 'login' %}true{% else %}false{% endif %}"
-              aria-controls="login-collapse">
+              aria-controls="login-collapse" title="Login">
               <span class="active">
                 Login
               </span>
-              <span class="exp-icon exp-up">
+              <span class="exp-icon">
+                <i class="fas fa-sign-in-alt"></i>
               </span>
             </a>
             <a class="btn-dope signup-link" href="/?view=signup" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="{% if view == 'signup' %}true{% else %}false{% endif %}"
-              aria-controls="signup-collapse">
+              aria-controls="signup-collapse" title="Signup">
               <span class="active">
                 Signup
               </span>
-              <span class="exp-icon exp-up">
+              <span class="exp-icon">
+                <i class="fas fa-user-plus"></i>
               </span>
             </a>
           </div>
