--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -2,11 +2,12 @@
   <div class="col-12 color-3 dope-options">
     <div class="dope-buttons dope-buttons-r">
       {% if results.genres %}
-        <a class="btn-dope" data-toggle="collapse" href="#genre-collapse-{{ results.view }}" aria-expanded="false" aria-controls="genre-collapse">
+        <a class="btn-dope" data-toggle="collapse" href="#genre-collapse-{{ results.view }}" aria-expanded="false" aria-controls="genre-collapse" title="Select Genre">
           <span class="active">
             Genre
           </span>
           <span class="exp-icon exp-down">
+            <i class="fas fa-ellipsis-v"></i>
             {% if results.selected_genre %}
               {{ results.selected_genre }}
             {% else %}
@@ -16,11 +17,12 @@
         </a>
       {% endif %}
       {% if results.languages %}
-        <a class="btn-dope" data-toggle="collapse" href="#language-collapse-{{ results.view }}" aria-expanded="false" aria-controls="language-collapse">
+        <a class="btn-dope" data-toggle="collapse" href="#language-collapse-{{ results.view }}" aria-expanded="false" aria-controls="language-collapse" title="Select Language">
           <span class="active">
             Language
           </span>
           <span class="exp-icon exp-down">
+            <i class="fas fa-ellipsis-v"></i>
             {% if results.selected_language %}
               {{ results.selected_language }}
             {% else %}
@@ -30,11 +32,12 @@
         </a>
       {% endif %}
       {% if results.provider %}
-        <a class="btn-dope" data-toggle="collapse" href="#provider-collapse-{{ results.view }}" aria-expanded="false" aria-controls="provider-collapse">
+        <a class="btn-dope" data-toggle="collapse" href="#provider-collapse-{{ results.view }}" aria-expanded="false" aria-controls="provider-collapse" title="Select Source">
           <span class="active">
             Source
           </span>
           <span class="exp-icon exp-down">
+            <i class="fas fa-ellipsis-v"></i>
             {% if results.provider == "dopepod" %}
               dopepod
             {% elif results.provider == "itunes" %}
@@ -50,9 +53,11 @@
 <div class="row">
   {% for podcast in results.podcasts %}
     <div class="col-12 expandable dope-result{% if forloop.counter|divisibleby:2 %} color-3{% endif %}">
-      <a class="charts-rank showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
-        {{ forloop.counter }}
-      </a>
+      <div class="charts-rank">
+        <span>
+          {{ forloop.counter }}
+        </span>
+      </div>
       <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
         <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}100x100bb.jpg"
         onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}100x100bb.jpg'" alt="{{ podcast.object.title }}" />
@@ -95,7 +100,7 @@
         </li>
       </ul>
       <div class="dope-buttons px-0">
-        <a class="btn-dope showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
+        <a class="btn-dope showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="Episodes of {{ podcast.object.title }}">
           <span class="active">
             Episodes
           </span>
