--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -1,7 +1,6 @@
 {% if not results.episodes and results.view == "playlist" %}
-{% else %}
+{% elif results.view == "showpod" %}
   <div class="row">
-    {% if results.view == "showpod" %}
       <div class="col-12 color-3 dope-options noborder">
         <div class="dope-buttons dope-buttons-r">
           {% if user.is_authenticated %}
@@ -9,38 +8,45 @@
               {% csrf_token %}
               <input type="hidden" name="podid" value="{{ results.podcast.podid }}">
               {% if results.podcast.is_subscribed %}
-                <button class="btn-dope sub-button" type="submit">
-                  <span>
+                <button class="btn-dope sub-button" type="submit" title="Unsubscribe">
+                  <span class="active">
                     Unsubscribe
+                  </span>
+                  <span>
+                    <i class="fas fa-times"></i>
                   </span>
                 </button>
               {% else %}
-                <button class="btn-dope sub-button" type="submit">
+                <button class="btn-dope sub-button" type="submit"title="Subscribe">
                   <span class="active">
                     Subscribe
+                  </span>
+                  <span>
+                    <i class="fas fa-check"></i>
                   </span>
                 </button>
               {% endif %}
             </form>
           {% endif %}
-          <a class="btn-dope" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
+          <a class="btn-dope" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse" title="Show Episodes">
             <span class="active">
               Episodes
             </span>
-            <span class="exp-icon exp-down">
+            <span class="exp-icon">
+              <i class="fas fa-bars"></i>
             </span>
           </a>
-          <a class="btn-dope" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse">
+          <a class="btn-dope" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse" title="Show Reviews">
             <span class="active">
               Reviews
             </span>
-            <span class="exp-icon exp-down">
+            <span class="exp-icon">
+              <i class="fas fa-star"></i>
             </span>
           </a>
         </div>
       </div>
-    {% endif %}
-  </div>
+    </div>
 {% endif %}
 {% if not results.view == "playlist" %}
   <div class="row fade collapse showpod-collapse" id="reviews-collapse">
@@ -120,7 +126,9 @@
                   <span>{% if episode.length %}{{ episode.length }}{% else %}N/A{% endif %}</span>
                 </td>
                 <td>
-                  <span class="exp-icon exp-down" data-toggle="collapse" data-target="#more-collapse{{ episode.position }}" aria-expanded="false"></span>
+                  <span class="exp-icon" data-toggle="collapse" data-target="#more-collapse{{ episode.position }}" aria-expanded="false">
+                    <i class="fas fa-ellipsis-v"></i>
+                  </span>
                 </td>
               </tr>
               <tr>
@@ -179,7 +187,7 @@
                           {% else %}
                             <input type="hidden" name="signature" value="{{ episode.signature }}" />
                           {% endif %}
-                          <button class="btn-dope playlist-play" type="submit" title="Play">
+                          <button class="btn-dope playlist-play" type="submit" title="Play Episode">
                             <span class="active">
                               Play
                             </span>
@@ -188,7 +196,7 @@
                             </span>
                           </button>
                         </form>
-                        <a class="btn-dope" href="{{ episode.url }}" title="Download" download>
+                        <a class="btn-dope" href="{{ episode.url }}" title="Download Episode" download>
                           <span class="active">
                             Download
                           </span>
@@ -197,7 +205,7 @@
                           </span>
                         </a>
                         {% if results.view == "playlist" %}
-                          <a class="btn-dope showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}">
+                          <a class="btn-dope showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="Episodes of {{ episode.podcast.title }}">
                             <span class="active">
                               Episodes
                             </span>
@@ -214,6 +222,9 @@
                             <button class="btn-dope" type="submit" title="Add to Playlist">
                               <span class="active">
                                 Add to Playlist
+                              </span>
+                              <span>
+                                <i class="fas fa-plus"></i>
                               </span>
                             </button>
                           </form>
