--- a/podcasts/templates/pagination.html
+++ b/podcasts/templates/pagination.html
@@ -2,15 +2,15 @@
   <div class="col-12 px-0">
     <div class="dope-buttons">
       {% if results.start_url %}
-        <a class="btn-dope options-button" href="{{ results.start_url }}">
+        <a class="btn-dope options-button" href="{{ results.start_url }}" title="First Page">
           <span>
-            <i class="fas fa-angle-double-left" title="First Page"></i>
+            <i class="fas fa-angle-double-left"></i>
           </span>
         </a>
       {% endif %}
       {% for page in results.pages %}
         {% if page.1 %}
-          <a class="btn-dope options-button" href="{{ page.1 }}">
+          <a class="btn-dope options-button" href="{{ page.1 }}" title="Page {{ page.0 }}">
             <span>
               {{ page.0 }}
             </span>
@@ -24,9 +24,9 @@
         {% endif %}
       {% endfor %}
       {% if results.end_url %}
-        <a class="btn-dope options-button" href="{{ results.end_url }}">
+        <a class="btn-dope options-button" href="{{ results.end_url }}" title="Last Page">
           <span>
-            <i class="fas fa-angle-double-right" title="Last Page"></i>
+            <i class="fas fa-angle-double-right"></i>
           </span>
         </a>
       {% endif %}
