--- a/podcasts/templates/results_bar.html
+++ b/podcasts/templates/results_bar.html
@@ -3,20 +3,22 @@
   <div class="col-12 px-0">
     {% if results.extra_options %}
       <div class="dope-buttons float-left">
-        <button class="btn-dope results-back" onclick="window.history.back()">
+        <button class="btn-dope results-back" onclick="window.history.back()" title="Back">
           <span>
-            <i class="fas fa-arrow-left" title="Back"></i>
+            <i class="fas fa-arrow-left"></i>
           </span>
         </button>
       </div>
       <div class="dope-buttons dope-buttons-r float-right">
         <a class="btn-dope" data-toggle="collapse" href="#results-collapse-{{ results.view }}" aria-expanded="true"
-          aria-controls="results-collapse">
-          <span class="exp-icon exp-nix"></span>
+          aria-controls="results-collapse" title="Minimize">
+          <span class="exp-icon exp-minus exp-nix">
+            <i class="fas fa-plus"></i>
+          </span>
         </a>
-        <a class="btn-dope index-link" href="/">
+        <a class="btn-dope index-link" href="/" title="Close">
           <span>
-            <i class="fas fa-times" title="Close"></i>
+            <i class="fas fa-times"></i>
           </span>
         </a>
       </div>
