--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -77,17 +77,17 @@
           </em>
         </li>
         <li>
-          <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ podcast.url_format_description }}&url={{ podcast.get_absolute_url }}">
+          <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ podcast.url_format_description }}&url={{ podcast.get_absolute_url }}" title="Share on Twitter">
             <span class="active">
-              <i class="fab fa-twitter" title="Tweet"></i>
+              <i class="fab fa-twitter"></i>
             </span>
             <span>
               Tweet
             </span>
           </a>
-          <a class="btn-dope" href="//www.facebook.com/sharer/sharer.php?u={{ podcast.get_absolute_url }}">
+          <a class="btn-dope" href="//www.facebook.com/sharer/sharer.php?u={{ podcast.get_absolute_url }}" title="Share on Facebook">
             <span class="active">
-              <i class="fab fa-facebook-f" title="Share"></i>
+              <i class="fab fa-facebook-f"></i>
             </span>
             <span>
               Share
