--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -6,7 +6,7 @@
           <span class="active">
             Genre
           </span>
-          <span class="exp-icon exp-down">
+          <span class="exp-icon">
             <i class="fas fa-ellipsis-v"></i>
             {% if results.selected_genre %}
               {{ results.selected_genre }}
@@ -21,7 +21,7 @@
           <span class="active">
             Language
           </span>
-          <span class="exp-icon exp-down">
+          <span class="exp-icon">
             <i class="fas fa-ellipsis-v"></i>
             {% if results.selected_language %}
               {{ results.selected_language }}
@@ -36,7 +36,7 @@
           <span class="active">
             Source
           </span>
-          <span class="exp-icon exp-down">
+          <span class="exp-icon">
             <i class="fas fa-ellipsis-v"></i>
             {% if results.provider == "dopepod" %}
               dopepod
