--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -84,7 +84,8 @@
     {% include "footer.min.html" %}
   </footer>
   <div id="loaders">
-    {% include "circle-loading.min.html" %} {% include "button-loading.min.html" %}
+    {% include "circle-loading.min.html" %}
+    {% include "button-loading.min.html" %}
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="{% static 'bs/bootstrap.min.js' %}"></script>
