--- a/index/templates/footer.html
+++ b/index/templates/footer.html
@@ -30,7 +30,7 @@
             <input type="hidden" name="item_name" value="dopepod">
             <input type="hidden" name="no_note" value="0">
             <input type="hidden" name="currency_code" value="USD">
-            <button class="dope-link" type="submit" title="Donate on PayPal">
+            <button class="dope-link" type="submit">
               Donate
             </button>
           </form>
