--- a/index/templates/listen.html
+++ b/index/templates/listen.html
@@ -148,7 +148,7 @@
             </button>
           </form>
           {% endif %}
-          <a class="btn-dope" data-toggle="collapse" data-target="#splash-play-collapse{{ forloop.counter }}" aria-expanded="false" title="Show More">
+          <a class="btn-dope exp" data-toggle="collapse" data-target="#splash-play-collapse{{ forloop.counter }}" aria-expanded="false" title="Show More">
             <span class="active">
               More
             </span>
