--- a/podcasts/templates/previous.html
+++ b/podcasts/templates/previous.html
@@ -20,7 +20,7 @@
         <img class="img-fluid" src="//{{ episode.podcast.artworkUrl }}100x100bb.jpg"
         onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" alt="{{ episode.podcast.title }}" />
       </a>
-      <button class="dope-toggle float-right" data-toggle="collapse" data-target="#previous-collapse{{ forloop.counter }}"
+      <button class="dope-toggle exp" data-toggle="collapse" data-target="#previous-collapse{{ forloop.counter }}"
       aria-expanded="false" title="Show More">
         <span class="exp-icon exp-nix">
           <i class="fas fa-ellipsis-v"></i>
