--- a/index/static/style.css
+++ b/index/static/style.css
@@ -85,6 +85,7 @@ form {
   padding: 3px;
 }
 .dope-toggle {
+  float: right;
   margin-left: 10px;
   cursor: pointer;
   height: 34px;
@@ -239,9 +240,8 @@ form {
   padding: 0 20px;
 }
 #splash {
-  padding: 0 0 15px 0;
-  min-height: 300px;
-  overflow: hidden;
+  padding: 0 0 50px;
+  min-height: 320px;
 }
 .slick-listen {
   max-width: 500px;
@@ -596,7 +596,7 @@ form {
   background: rgb(0, 191, 165);
   border-bottom: 2px solid rgb(0, 191, 165);
 }
-.results .results-bar h1 {
+.results-bar h1 {
   text-align: center;
   font-size: 18px;
   font-weight: 600;
@@ -629,17 +629,11 @@ form {
   padding: 0;
   border-bottom: 2px solid rgb(0, 191, 165);
 }
-.options-collapse {
-  border-top: 2px solid rgb(0, 191, 165);
-}
 
 /* DOPE-RESULT */
 .dope-result {
   outline: none;
   padding: 10px 10px 0;
-}
-#splash .dope-result {
-  padding-bottom: 20px;
 }
 .dope-result img {
   border-radius: .25rem;
@@ -676,7 +670,7 @@ form {
   margin-right: auto;
 }
 .results-back {
-  margin-right: 42px;
+  margin-right: 40px;
 }
 .view-collapse.show {
   display: -ms-flexbox;
